--- a/scss/style.scss
+++ b/scss/style.scss
@@ -56,6 +56,7 @@ body {
 
 .container {
   min-width: 320px;
+  overflow-x: hidden;
   padding: 24px 0 50px;
 }
 
